# krunner-translator

./: .gitignore  CLAUDE.md  CMakeLists.txt  Changelog  INSTALL  LanguageRepository.cpp  LanguageRepository.h  README  README.md  SupportedLanguages.h  glosbe.cpp  helper.h  install.sh  languages.cpp  languages.h  plasma-runner-translator.desktop  plasma-runner-translator_config.desktop  translateShellProcess.cpp  translateShellProcess.h  translator.cpp  translator.h  translator_config.cpp  translator_config.h  translator_config.ui  translatorjob.cpp  translatorjob.h  uninstall.sh
.github/workflows/: build-package.yml  release.yml  validate-package.yml
api/: GoogleTranslate.cpp  GoogleTranslate.h  baidu.cpp  baidu.h  glosbe.cpp  glosbe.h  translateShell.cpp  translateShell.h  translateShellProcess.cpp  translateShellProcess.h  yandex.cpp  yandex.h  youdao.cpp
config/: LanguageRepository.cpp  LanguageRepository.h  languages.cpp  languages.h  translator_config.cpp  translator_config.h  translator_config.ui
provider/: Bing.cpp  Bing.h  GoogleTranslate.cpp  GoogleTranslate.h  glosbe.h  yandex.cpp  yandex.h  youdao.cpp
src/: LanguageRepository.cpp  LanguageRepository.h  Parser.cpp  Parser.h  SupportedLanguages.h  TranslateShellProcess.cpp  TranslateShellProcess.h  TranslationQuery.cpp  TranslationQuery.h  Translator.cpp  Translator.h  languages.cpp  languages.h  plasma-runner-translator.json  translateShellProcess.cpp  translateShellProcess.h  translator.cpp  translator.h  translator.json
src/api/: CommandLineEngine.h
src/config/: config_keys.h  kcm_krunner_translator.json  translator_config.cpp  translator_config.h  translator_config.ui
src/language/: Language.cpp  Language.h  LanguageRepository.cpp  LanguageRepository.h  SupportedLanguages.h
src/provider/: Bing.cpp  Bing.h  GoogleTranslate.cpp  GoogleTranslate.h  baidu.cpp  baidu.h  youdao.cpp  youdao.h
src/translationEngines/api/: CommandLineEngine.h
src/translationEngines/impl/: Bing.cpp  Bing.h  GoogleTranslate.cpp  GoogleTranslate.h  baidu.cpp  baidu.h  deepl.cpp  deepl.h  youdao.cpp  youdao.h
test/: TranslateShellProcessTest.cpp  TranslateShellProcessTest.h  translateShellProcessTest.cpp  translateShellProcessTest.h
